Update a couple column names in ShivActivity

--- a/app/views/shiv_activities/new.html.erb
+++ b/app/views/shiv_activities/new.html.erb
@@ -5,10 +5,10 @@
     <%= f.input :eat_healthy, label: 'Eat healthy' %>
     <%= f.input :one_beer_max, label: '1 beer max' %>
     <%= f.input :no_smoking, label: 'No smoking' %>
-    <%= f.input :meet_up_with_friend, label: "Meet up with someone you haven't seen in a while" %>
-    <%= f.input :show_or_meetup, label: 'Go to a small show or tech meetup' %>
-    <%= f.input :read_a_book, label: 'Read a book (or listen to an audiobook' %>
-    <%= f.input :no_frustration, label: "Don't get frustrated -- stay positive" %>
+    <%= f.input :meet_up_with_friend_or_show, label: "Meet up with someone you don't see often or go to a show" %>
+    <%= f.input :side_project_or_meetup, label: 'Work on a side project or attend a tech meetup' %>
+    <%= f.input :read_a_book, label: 'Read a book (or listen to an audiobook)' %>
+    <%= f.input :no_frustration, label: "Don't get frustrated -- be reasonable" %>
     <%= f.input :organize_or_clean, label: 'Organize or clean something' %>
   <% end %>
 
